[build-system]
requires = ["setuptools", "wheel"] 

[[project.authors]]
name = "Max Suica"
email = "max.suica@gmail.com"

[project.license]
text = "AGPLv3"

[project.urls]
Homepage = "https://github.com/maxsu/PhoneDaller"
"Bug Tracker" = "https://github.com/maxsu/PhoneDaller/issues"

[project]
name = "PhoneDaller"
version = "0.1.0"
description = "I Love You But Please Turn Off Your Phone Or Give Me A Dall📵📞💕"
readme = "README.md"

dependencies = [
    # QA
    "flake8",
    
    # Testing
    "pytest",
]
requires-python = ">=3.8"

keywords = [
    "Phone",
    "GPT",
    "Helper",
]

classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3",
]
